Remove aspect ratio since it causes issues on ios

--- a/src/App.css
+++ b/src/App.css
@@ -28,9 +28,16 @@ body {
   }
 }
 
+/* https://stackoverflow.com/questions/29307971/css-grid-of-squares-with-flexbox */
+.item:before {
+  content: "";
+  display: block;
+  padding-top: 100%;
+  float: left;
+}
+
 .item {
   background-color: #f1f1f1;
-  aspect-ratio: 1/1;
   display: flex;
   justify-content: center;
   align-items: center;
